--- a/finalTask/package.json
+++ b/finalTask/package.json
@@ -23,5 +23,8 @@
     "@wdio/devtools-service": "^8.42.0",
     "@wdio/local-runner": "^9.15.0",
     "@wdio/spec-reporter": "^9.15.0"
+  },
+  "dependencies": {
+    "log4js": "^6.9.1"
   }
 }
